fixed flames select on mobile

--- a/app/assets/stylesheets/rails_application/temperature.css.sass
+++ b/app/assets/stylesheets/rails_application/temperature.css.sass
@@ -1,3 +1,4 @@
+
 .temperature_page
   .donation_amount
     padding: 12px 0
@@ -69,7 +70,7 @@
       margin-top: 50px
 
       @media (max-height: 600px)
-        margin-top: 25px
+        margin-top: 35px
 
 
 
